# pytorch-ml-play

./: .gitignore  pyproject.toml
src/: Untitled.ipynb
src/begin-pytorch-book/chapter2/: Chapter 2.ipynb  download.py
src/begin-pytorch-book/chapter3/: Chapter 3.ipynb
src/coursera/ibm-pytorch/: 3.6_training_and_validation_v3.ipynb
src/dl-pytorch-book/p1ch4/: 1_image_dog.ipynb  2_volumetric_ct.ipynb
